--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
