--- a/package.json
+++ b/package.json
@@ -16,16 +16,23 @@
     "@chakra-ui/next-js": "^2.1.3",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.1.2",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/dom": "^1.7.3",
+    "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@tabler/icons-react": "^3.34.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
@@ -33,13 +40,16 @@
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^18.2.0",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/next": "^8.0.7",
     "@types/node": "^20.8.10",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.18",
