--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.8",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.1.3",
     "@chakra-ui/react": "^2.8.2",
@@ -20,6 +21,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@floating-ui/dom": "^1.7.3",
+    "@heroui/react": "^2.8.2",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
