--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^11.0.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "14.1.0",
@@ -59,9 +59,11 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.5.6",
-    "postcss-import": "^16.1.0",
+    "postcss-import": "^16.1.1",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.3.0",
     "preline": "^3.2.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
 }
