--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/google.maps": "^3.58.1",
     "@types/next": "^8.0.7",
     "@types/node": "^20.8.10",
     "@types/react": "^18.3.23",
