--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.11.0",
     "@floating-ui/dom": "^1.7.3",
     "@heroui/react": "^2.8.2",
+    "@paper-design/shaders-react": "^0.0.46",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
