--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@ai-sdk/google": "^2.0.8",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.1.3",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.8.0",
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/cache": "^11.14.0",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@floating-ui/dom": "^1.7.3",
     "@heroui/react": "^2.8.2",
@@ -36,15 +36,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^10.16.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "^14.1.0",
+    "next": "^15.5.2",
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^18.3.1",
+    "react-focus-lock": "^2.9.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
