--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^10.16.0",
+    "firebase-admin": "^13.5.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "^15.5.2",
