feat: implement phone verification flow with OTP
- Add phone input and OTP verification components
- Set up Firebase authentication and services
- Update onboarding flow with multi-step form
- Add necessary TypeScript types and configurations
- Include Firebase security rules

--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.56.1",
         "@tabler/icons-react": "^3.34.1",
+        "@types/react-phone-number-input": "^3.0.17",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "firebase": "^12.2.1",
         "firebase-admin": "^13.5.0",
         "framer-motion": "^12.23.12",
+        "input-otp": "^1.4.2",
         "lucide-react": "^0.539.0",
         "motion": "^12.23.12",
         "next": "^15.5.2",
@@ -48,6 +51,7 @@
         "react-day-picker": "^9.9.0",
         "react-dom": "^18.3.1",
         "react-focus-lock": "^2.9.1",
+        "react-phone-number-input": "^3.4.12",
         "simplex-noise": "^4.0.3",
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2"
