--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@floating-ui/dom": "^1.7.3",
+        "@heroui/input-otp": "^2.1.25",
         "@heroui/react": "^2.8.2",
         "@paper-design/shaders-react": "^0.0.46",
         "@popperjs/core": "^2.11.8",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-navigation-menu": "^1.2.14",
         "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-progress": "^1.1.7",
+        "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/themes": "^3.2.1",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -37,6 +41,7 @@
         "@types/react-phone-number-input": "^3.0.17",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "firebase": "^12.2.1",
         "firebase-admin": "^13.5.0",
