--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@supabase/supabase-js": "^2.56.1",
         "@tabler/icons-react": "^3.34.1",
         "@types/react-phone-number-input": "^3.0.17",
+        "@vercel/kv": "^3.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
