--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@ai-sdk/google": "^2.0.8",
+        "@ai-sdk/google": "^2.0.13",
         "@chakra-ui/icons": "^2.2.4",
         "@chakra-ui/next-js": "^2.1.3",
         "@chakra-ui/react": "^2.8.0",
@@ -21,6 +21,7 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@floating-ui/dom": "^1.7.3",
+        "@google/generative-ai": "^0.24.1",
         "@heroui/input-otp": "^2.1.25",
         "@heroui/react": "^2.8.2",
         "@paper-design/shaders-react": "^0.0.46",
