--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@radix-ui/react-progress": "^1.1.7",
         "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@radix-ui/themes": "^3.2.1",
         "@react-firebase/auth": "^0.2.10",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
