--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-focus-lock": "^2.9.1",
         "react-phone-number-input": "^3.4.12",
         "simplex-noise": "^4.0.3",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2"
     },
