--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@ai-sdk/google": "^2.0.13",
+        "@auth/firebase-adapter": "^2.10.0",
         "@chakra-ui/icons": "^2.2.4",
         "@chakra-ui/next-js": "^2.1.3",
         "@chakra-ui/react": "^2.8.0",
@@ -42,6 +43,7 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.56.1",
         "@tabler/icons-react": "^3.34.1",
+        "@types/react-dropzone": "^4.2.2",
         "@types/react-phone-number-input": "^3.0.17",
         "@vercel/kv": "^3.0.0",
         "class-variance-authority": "^0.7.1",
@@ -51,15 +53,18 @@
         "firebase": "^12.2.1",
         "firebase-admin": "^13.5.0",
         "framer-motion": "^12.23.12",
+        "googleapis": "^160.0.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.539.0",
         "motion": "^12.23.12",
         "next": "^15.5.2",
+        "next-auth": "^4.24.11",
         "next-themes": "^0.2.1",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-day-picker": "^9.10.0",
         "react-dom": "^18.3.1",
+        "react-dropzone": "^14.3.8",
         "react-focus-lock": "^2.9.1",
         "react-phone-number-input": "^3.4.12",
         "simplex-noise": "^4.0.3",
