--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@tabler/icons-react": "^3.34.1",
         "@types/react-dropzone": "^4.2.2",
         "@types/react-phone-number-input": "^3.0.17",
+        "@vercel/analytics": "^1.5.0",
         "@vercel/kv": "^3.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -53,6 +54,7 @@
         "firebase": "^12.2.1",
         "firebase-admin": "^13.5.0",
         "framer-motion": "^12.23.12",
+        "geist": "^1.5.1",
         "googleapis": "^160.0.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.539.0",
