--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "firebase": "^12.2.1",
-        "firebase-admin": "^13.5.0",
+        "firebase-admin": "^12.7.0",
         "framer-motion": "^12.23.22",
         "geist": "^1.5.1",
         "googleapis": "^160.0.0",
@@ -74,6 +74,10 @@
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2"
     },
+    "overrides": {
+        "firebase-admin": "^12.7.0",
+        "tailwindcss": "^3.4.17"
+    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
@@ -82,6 +86,7 @@
         "@types/node": "^20.8.10",
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.2.18",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^7.3.1",
         "@typescript-eslint/parser": "^7.3.1",
         "autoprefixer": "^10.4.21",
