--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.56.1",
         "@tabler/icons-react": "^3.34.1",
+        "@tamagui/animations-css": "^1.135.0",
+        "@tamagui/animations-react-native": "^1.135.0",
+        "@tamagui/button": "^1.135.0",
+        "@tamagui/config": "^1.135.0",
+        "@tamagui/core": "^1.135.0",
+        "@tamagui/font-inter": "^1.135.0",
+        "@tamagui/theme-base": "^1.135.0",
         "@types/react-dropzone": "^4.2.2",
         "@types/react-phone-number-input": "^3.0.17",
         "@vercel/analytics": "^1.5.0",
@@ -68,10 +75,12 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.8",
         "react-focus-lock": "^2.9.1",
+        "react-native-web": "^0.21.1",
         "react-phone-number-input": "^3.4.12",
         "simplex-noise": "^4.0.3",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
+        "tamagui": "^1.135.0",
         "vaul": "^1.1.2"
     },
     "overrides": {
