--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
         "daisyui": "^5.0.54",
         "eslint": "^8.56.0",
         "eslint-config-next": "^14.1.0",
+        "firebase-tools": "^14.19.1",
         "postcss": "^8.5.6",
         "postcss-import": "^16.1.1",
         "postcss-nested": "^7.0.2",
